--- a/assign1.html
+++ b/assign1.html
@@ -19,6 +19,11 @@
     <div class="container">
       <div class="skill progress2">65%</div>
     </div>
+
+    <p>REACT</p>
+    <div class="container">
+      <div class="skill progress3">70%</div>
+    </div>
  
 
  
