added left margin

--- a/assign1.html
+++ b/assign1.html
@@ -10,22 +10,21 @@
     <h2>Hello I am Ajay Karode</h2>
     <h3>This is my progress</h3>
 
-    <p>HTML/CSS</p>
-    <div class="container">
-      <div class="skill progress1">80%</div>
-    </div>
+    <div class="middle">
+      <p>HTML/CSS</p>
+      <div class="container">
+        <div class="skill progress1">80%</div>
+      </div>
 
-    <p>JAVASCRIPT</p>
-    <div class="container">
-      <div class="skill progress2">65%</div>
-    </div>
+      <p>JAVASCRIPT</p>
+      <div class="container">
+        <div class="skill progress2">65%</div>
+      </div>
 
-    <p>REACT</p>
-    <div class="container">
-      <div class="skill progress3">70%</div>
+      <p>REACT</p>
+      <div class="container">
+        <div class="skill progress3">70%</div>
+      </div>
     </div>
- 
-
- 
   </body>
 </html>
