--- a/assign1.html
+++ b/assign1.html
@@ -25,6 +25,11 @@
       <div class="container">
         <div class="skill progress3">70%</div>
       </div>
+
+      <p>MongoDB</p>
+      <div class="container">
+        <div class="skill progress4">60%</div>
+      </div>
     </div>
   </body>
 </html>
